# pargen

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  README.md  SPEC.md  TODO.md
src/: lib.rs  main.rs  mcp.rs
src/analysis/: first_follow.rs  left_rec.rs  mod.rs
src/codegen/: c.rs  cpp.rs  go.rs  java.rs  mod.rs  python.rs  rust.rs  treesitter.rs  typescript.rs
src/core/: error.rs  mod.rs  traits.rs
src/grammar/: ast.rs  lexer.rs  mod.rs  parser.rs
tests/: codegen_test.rs  integration_test.rs
tests/snapshots/: codegen_test__snapshot_simple_c.snap  codegen_test__snapshot_simple_cpp.snap  codegen_test__snapshot_simple_go.snap  codegen_test__snapshot_simple_java.snap  codegen_test__snapshot_simple_python.snap  codegen_test__snapshot_simple_rust.snap  codegen_test__snapshot_simple_treesitter.snap  codegen_test__snapshot_simple_typescript.snap
