[package]
name = "pargen"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "A parser generator using ANTLR grammar syntax, outputting to Rust, Go, TypeScript, Python, Java, C, C++, and Tree-sitter"
license = "Apache-2.0"

[[bin]]
name = "pargen"
path = "src/main.rs"

[[bin]]
name = "pargen-mcp"
path = "src/bin/pargen-mcp.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"

# MCP server
rmcp = { version = "0.12", features = ["server", "macros", "transport-io"] }
tokio = { version = "1.0", features = ["full"] }
schemars = { version = "1.0", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
insta = "1.41"
criterion = "0.5"
tempfile = "3.11"
proptest = "1.6"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
